--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,4 +46,5 @@
 <script src='/client/linkView.js'></script>
 <script src='/client/linksView.js'></script>
 <script src='/client/createLinkView.js'></script>
+<script src='/client/loginView.js'></script>
 <script src='/client/router.js'></script>
