--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,5 +13,5 @@
     </div>
 </form>
 <p>
-  <a href="/signup">Create an Account &rarr;</a>
+  <a href="/signup">Don't got no username?  Sign up right hur! &rarr;</a>
 <p>
